third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/raw-identifier.stderr
error: invalid format string: raw identifiers are not supported
 --> tests/ui/raw-identifier.rs:4:18
  |
4 | #[error("error: {r#fn}")]
  |                  --^^
  |                  |
  |                  raw identifier used here in format string
  |                  help: remove the `r#`
  |
  = note: identifiers in format strings can be keywords and don't need to be prefixed with `r#`

error: invalid format string: raw identifiers are not supported
  --> tests/ui/raw-identifier.rs:11:30
   |
11 |     let _ = format!("error: {r#fn}");
   |                              --^^
   |                              |
   |                              raw identifier used here in format string
   |                              help: remove the `r#`
   |
   = note: identifiers in format strings can be keywords and don't need to be prefixed with `r#`
